static/css/style.css
/* ... */
.post-nav i:before {
    margin: 0;
    width: auto
}

.post-nav-next i {
    left: 0;
    margin-left: -4rem
}

.post-nav-prev i {
    right: 0;
    margin-right: -4rem
}

.post-nav-title {
    margin: 0 0 0.5rem;
    padding: 0;
    font-size: 2em;
    line-height: 3rem;
    color: inherit;
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    color: var(--color-content-lead)
}

.post-nav-excerpt {
    height: 5rem;
    margin: 0 0 1rem;
    font-family: var(--font-secondary);
    font-size: 1.5em;
    line-height: 2.5rem;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis
}

.post-nav-meta {
    margin: 0;
    font-size: 1.6em;
    line-height: 2rem;
    color: var(--color-content-secondary)
}

.pagination {
    position: relative;
    margin: 0
}

.pagination .pagination-box {
    padding-top: calc(2rem + 1vw);
    padding-bottom: calc(2rem + 1vw)
}

.pagination .pagination-box:after {
    clear: both;
    content: '';
    display: table
}

.pagination a {
    position: relative;
    display: block;
    height: 4rem;
    margin: -1px 0;
    padding: 0 2rem;
    z-index: 100;
    border: 1px solid var(--color-background-contrast);
    font-size: 1.6em;
    line-height: 4rem;
    font-weight: 500;
    text-align: center;
    text-decoration: none;
    color: var(--color-content-secondary);
    transition: all ease 0.2s;
    border-radius: 4rem;
    box-sizing: border-box
}

.pagination a:focus,.pagination a:hover {
    color: var(--color-primary-active);
    border-color: var(--color-primary-active)
}

.pagination .pagination-prev {
    float: right;
    padding-right: 1.5rem
}

.pagination .pagination-next {
    float: left;
    padding-left: 1.5rem
}

.pagination .pagination-label {
    position: relative;
    top: -1px;
    display: inline-block
}

@media only screen and (max-width: 480px) {
    .pagination .pagination-label {
        display:none
    }
}

.pagination a i {
    position: relative;
    top: 1px;
    width: auto;
    margin: auto 4px;
    color: inherit;
    font-size: 1.33334em;
    line-height: 0.75em
}

.pagination a i:before {
    position: relative;
    width: auto;
    margin: auto
}

.pagination .pagination-info {
    position: absolute;
    width: 100%;
    font-size: 1.6em;
    line-height: 4rem;
    height: 4rem;
    left: 0;
    z-index: 50;
    display: block;
    text-align: center;
    color: var(--color-content-secondary)
}

.extra-pagination {
    display: none
}

.paged .extra-pagination {
    display: block
}

.paged .extra-pagination .pagination-box {
    border-bottom: 1px solid var(--color-background-contrast)
}

/* Custom CSS for pelican attila */


/* css for post author */
/* TODO: Media css 480px
.post-author-avatar {
    margin: -0.25em 0 0 0.5em
}
*/
.post-author {
    position: relative;
    margin: 2em 0 0;
    padding: 2em 0;
    z-index: 10;
    border-top: 1px solid #e5e4e1;
    /* border-bottom: 1px solid #e5e4e1; */
    clear: both
}

.post-author-avatar {
    position: relative;
    float: left;
    width: 15%;
    margin: -0.5em 0 0 5%;
    overflow: hidden;
    background: #fff;
    border-radius: 10em;
    box-sizing: border-box
}

.post-author-avatar img {
    width: 100%;
    margin: auto;
    border-radius: 10em;
    box-sizing: border-box
}

.post-author-bio {
    padding-left: 25%;
    font-family: 'Fira Sans', sans-serif;
    font-size: 2em;
    line-height: 1.333em
}

.post-author-name {
    margin: 0;
    padding: 0;
    font-size: 2em;
    line-height: 1em;
    text-indent: inherit
}

.post-author-about {
    margin: 0.666em 0
}

.post-author-bio span {
    position: relative;
    font-size: 0.8em;
    display: inline-block;
    margin-top: 1.25em;
    margin-right: 1.25em;
    font-weight: 400;
    opacity: 0.5
}

.post-author-bio i {
    color: inherit
}

.post-author-bio a {
    color: inherit;
    text-decoration: none;
    font-weight: inherit;
    border-bottom: 1px solid transparent
}

/* css for display tags and comment count in post summary */

.post-excerpt .post-tags a {
    font-size: 1.0em;
}

.post-excerpt .post-comments-count {
    float: right;
    font-size: 1.0em;
}

.post-excerpt .post-comments-count a {
    color: inherit;
    text-decoration: none;
    font-weight: 400;
    box-shadow: inset 0 -2px 0 var(--color-primary);
    transition: all ease-out 0.1s
}

.post-excerpt .post-comments-count a:focus,.post-excerpt .post-comments-count a:hover {
    box-shadow: inset 0 -3px 0 var(--color-primary-active)
}


/* css for tag cloud */

.tag-cloud {
    text-align: center;
    margin-bottom: 3em;
}

.tag-cloud .tag {
    display: inline-block;
    padding: 0.2em 0.15em;
    vertical-align: middle;
}

.tag-cloud a {
    display: inline-block;
    padding: 0.5em 1em;
    color: var(--color-content-secondary);
    text-decoration: none;
    border: 1px solid var(--color-background-contrast);
    border-radius: 4px;
    transition: all ease 0.2s
}

.tag-cloud a:focus,.tag-cloud a:hover {
    color: var(--color-primary-active);
    border-color: var(--color-primary-active)
}

.tag-weight-1  { font-size: 1.0em; }
.tag-weight-2  { font-size: 1.2em; }
.tag-weight-3  { font-size: 1.4em; }
.tag-weight-4  { font-size: 1.6em; }
.tag-weight-5  { font-size: 1.8em; }
.tag-weight-6  { font-size: 2.0em; }
.tag-weight-7  { font-size: 2.2em; }
.tag-weight-8  { font-size: 2.4em; }
.tag-weight-9  { font-size: 2.6em; }
.tag-weight-10 { font-size: 2.8em; }


/* this sets the scrolling in x */
.highlight pre {
    overflow-x: auto;
}

/* Hide github and linkedin in social icons for small screen */
@media only screen and (max-width: 640px) {
    .nav-meta li.nav-linkedin,.nav-meta li.nav-github li.nav-mastodon {
        display:none
    }
}

